--- a/package.json
+++ b/package.json
@@ -1,27 +1,58 @@
 {
-  "name": "electron-auto-update-example",
-  "version": "1.0.1",
-  "description": "",
-  "main": "main.js",
+  "name": "test-updater",
+  "productName": "test updater",
+  "version": "0.0.1",
+  "description": "Example of using electron-simple-updater",
+  "main": "app/main.js",
+  "scripts": {
+    "postinstall": "install-app-deps",
+    "start": "electron .",
+    "dist": "electron-builder",
+    "publish": "publish",
+    "release": "npm run dist && npm run publish"
+  },
+  "author": "Merlin",
+  "license": "MIT",
+  "private": true,
+  "build": {
+    "appId": "com.electron-updater",
+    "files": [
+      "!publisher.json",
+      "!README.md",
+      "!updates.json"
+    ],
+    "linux": {
+      "category": "Development",
+      "publish": false,
+      "target": "AppImage"
+    },
+    "mac": {
+      "category": "public.app-category.developer-tools"
+    },
+    "win": {
+      "target": "squirrel"
+    },
+    "squirrelWindows": {
+      "iconUrl": "https://raw.githubusercontent.com/megahertz/electron-simple-updater/master/example/build/icon.ico"
+    }
+  },
+  "updater": {
+    "url": "https://raw.githubusercontent.com/megahertz/electron-simple-updater/master/example/updates.json"
+  },
+  "engines": {
+    "node": ">=6.0"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MaksMoskalyk/testelectronautdater.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
-    "build": "electron-builder build --win --publish never",
-    "buildmac": "electron-builder build --mac--publish never",
-    "deploy": "electron-builder build --win --publish always",
-    "deploymac": "electron-builder build --mac --publish always"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "electron": "^5.0.1",
-    "electron-builder": "^20.40.2"
+    "url": "git+https://github.com/megahertz/electron-simple-updater.git"
   },
   "dependencies": {
-    "electron-updater": "^4.0.6"
+    "electron-simple-updater": "^2.0.0-beta.1"
+  },
+  "devDependencies": {
+    "electron": "*",
+    "electron-builder": "*",
+    "electron-simple-publisher": "*",
+    "electron-builder-squirrel-windows": "*"
   }
 }
